# packages/api/src/schemas/requests.ts
@@ -242,6 +242,8 @@ export type UpdateJobSchedulerBody = RequestSchemas['UpdateJobSchedulerBody'];
 export type PurgeMetricsHistoryBody = RequestSchemas['PurgeMetricsHistoryBody'];
 export type GetPgBossJobsQuery = RequestSchemas['GetPgBossJobsQuery'];
 export type GetPgBossSchedulesQuery = RequestSchemas['GetPgBossSchedulesQuery'];
+export type GetPgBossQueueDepthQuery = RequestSchemas['GetPgBossQueueDepthQuery'];
+export type GetPgBossWarningsQuery = RequestSchemas['GetPgBossWarningsQuery'];
 export type PreviewPgBossScheduleBody = RequestSchemas['PreviewPgBossScheduleBody'];
 export type SendPgBossJobBody = RequestSchemas['SendPgBossJobBody'];
 export type PgBossJobIdsBody = RequestSchemas['PgBossJobIdsBody'];
