# packages/api/src/schemas/responses.ts
@@ -166,6 +166,9 @@ export type GetPgBossQueueResponse = ResponseSchemas['GetPgBossQueueResponse'];
 export type GetPgBossStateCountsResponse = ResponseSchemas['GetPgBossStateCountsResponse'];
 export type GetPgBossJobsResponse = ResponseSchemas['GetPgBossJobsResponse'];
 export type GetPgBossJobResponse = ResponseSchemas['GetPgBossJobResponse'];
+export type FindPgBossJobResponse = ResponseSchemas['FindPgBossJobResponse'];
+export type GetPgBossQueueDepthResponse = ResponseSchemas['GetPgBossQueueDepthResponse'];
+export type GetPgBossWarningsResponse = ResponseSchemas['GetPgBossWarningsResponse'];
 export type GetPgBossDependenciesResponse = ResponseSchemas['GetPgBossDependenciesResponse'];
 export type GetPgBossSchedulesResponse = ResponseSchemas['GetPgBossSchedulesResponse'];
 export type PreviewPgBossScheduleResponse = ResponseSchemas['PreviewPgBossScheduleResponse'];
